--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "2.7"
 
 # command to install dependencies
-install: "pip install mechanize keyring notify2"
+install: "pip install mechanize keyring notify2 dbus"
 # command to run tests
 script: ./kotnetcli.py -1
