--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 # command to install dependencies
 install: "pip install mechanize keyring colorama"
 # command to run tests
-script: ./kotnetcli.py -1
+script: ./kotnetcli.py -1 && ./kotnetcli.py -0
