--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
   - "2.7"
 
+
+before_install: 
+  - sudo apt-get update -qq
+  - sudo apt-get install dialog ncurses
 # command to install dependencies
 install: "pip install mechanize keyring colorama python2-pythondialog"
 # command to run tests
