--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 before_install: 
   - sudo apt-get update -qq
-  - sudo apt-get install dialog ncurses
+  - sudo apt-get install dialog ncurses-base ncurses-bin
 # command to install dependencies
 install: "pip install mechanize keyring colorama python2-pythondialog"
 # command to run tests
