--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,15 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install dialog
   - git clone https://github.com/pyinstaller/pyinstaller.git
-  - sudo apt-get install libdbus-glib-1-dev
-  - wget http://dbus.freedesktop.org/releases/dbus-python/dbus-python-1.2.0.tar.gz
-  - mkdir dbus
-  - tar xvzf dbus-python-1.2.0.tar.gz -C dbus --strip-components=1
-  - cd dbus
-  - ./configure --prefix=/tmp/dbus-python
-  - make
-  - sudo make install
+  - sudo apt-get install python-dbus python-dbus-dev
+#  - sudo apt-get install libdbus-glib-1-dev
+#  - wget http://dbus.freedesktop.org/releases/dbus-python/dbus-python-1.2.0.tar.gz
+#  - mkdir dbus
+#  - tar xvzf dbus-python-1.2.0.tar.gz -C dbus --strip-components=1
+#  - cd dbus
+#  - ./configure --prefix=/tmp/dbus-python
+#  - make
+#  - sudo make install
   
 ## Command to install pip dependencies
 install: 
