--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_install:
   - sudo apt-get install dialog
   - git clone https://github.com/pyinstaller/pyinstaller.git
   - sudo apt-get install python-dbus python-dbus-dev
+  - cp -r /usr/lib/python2.7/dist-packages/dbus myvirtenv/usr/lib/pythonX.X/site-packages/    
+  - cp -r /usr/lib/python2.7/dist-packages/_dbus_*.so myvirtenv/usr/lib/pythonX.X/site-packages/
 #  - sudo apt-get install libdbus-glib-1-dev
 #  - wget http://dbus.freedesktop.org/releases/dbus-python/dbus-python-1.2.0.tar.gz
 #  - mkdir dbus
