--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - sudo apt-get update -qq
     - sudo apt-get install dialog
     - git clone https://github.com/pyinstaller/pyinstaller.git
-    - sudo apt-get install python-dbus python-dbus-dev
+    - sudo apt-get install python-dbus python-dbus-dev 
 #    - cp -r /usr/lib/python2.7/dist-packages/dbus /home/travis/virtualenv/python2.7.8/site-packages/        
 #    - cp -r /usr/lib/python2.7/dist-packages/_dbus_*.so /home/travis/virtualenv/python2.7.8/site-packages/
 #    - sudo apt-get install libdbus-glib-1-dev
@@ -22,7 +22,7 @@ before_install:
     
 ## Command to install pip dependencies
 install: 
-    - pip install mechanize keyring colorama python2-pythondialog
+    - pip install mechanize keyring colorama python2-pythondialog beautifulsoup4
 #    - pip install dbus-python
 
 ## command to run tests
