--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,20 @@
+# travis
+# -*- coding: utf-8 -*-
+
+## Dependencies:    python-mechanize, python-keyring, curses
+## Author:          Gijs Timmers: https://github.com/GijsTimmers
+## Contributors:    Gijs Timmers: https://github.com/GijsTimmers
+##                  Jo Van Bulck: https://github.com/jovanbulck
+
+## Licence:         CC-BY-SA-4.0
+##                  https://creativecommons.org/licenses/by-sa/4.0/
+
+## This work is licensed under the Creative Commons
+## Attribution-ShareAlike 4.0 International License. To view a copy of 
+## this license, visit https://creativecommons.org/licenses/by-sa/4.0/ or
+## send a letter to Creative Commons, PO Box 1866, Mountain View, 
+## CA 94042, USA.
+
 language: python
 python:
     - "2.7"
