--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@
 ## CA 94042, USA.
 
 language: python
-python:
-    - "2.7"
+python: "2.7"
+#python:
+#    - "2.7"
 
 
 ## Command to install system dependencies
