--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include *.py
-recursive-include communicator *.py *.md
-prune examples/sample?/build
+#include *.py
+#recursive-include communicator *.py *.md
+#prune examples/sample?/build
