Package format, big cleanup, lazy imports
- Changed files to make kotnetcli a package application. Some
  important implications:

  * Please prepend local imports with a dot from now on,
    for example:
    from .browser import KotnetBrowser

  * Please run kotnetcli by either running
    ./kotnetcli-runner.py
    or by installing:
    sudo python2 setup.py install && kotnetcli

  * Don't run kotnetcli.py directly anymore. This will be deprecated
    in the future.

- Big cleanup of unused imports, old stuff, old comments, etcetera

- Added a few lazy imports in communicator/fabriek.py.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
-#include *.py
-#recursive-include communicator *.py *.md
-#prune examples/sample?/build
+include kotnetcli/communicator/*.py
+include kotnetcli/tools/*.py
+include kotnetcli/logoutformuliertemplate.html
+global-exclude *pyc
