--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,24 @@
 ## send a letter to Creative Commons, PO Box 1866, Mountain View, 
 ## CA 94042, USA.
 
+## Moving to container-based infrastructure
+sudo: false
+
+## Setting up the correct language
 language: python
 python: "2.7"
-#python:
-#    - "2.7"
 
+## Command to install system dependencies
+addons:
+  apt:
+    packages:
+    - dialog
+    - python-dbus
+    - python-dbus-dev
 
 ## Command to install system dependencies
 before_install: 
-    - sudo apt-get update -qq
-    - sudo apt-get install dialog
     - git clone https://github.com/pyinstaller/pyinstaller.git
-    - sudo apt-get install python-dbus python-dbus-dev 
 #    - cp -r /usr/lib/python2.7/dist-packages/dbus /home/travis/virtualenv/python2.7.8/site-packages/        
 #    - cp -r /usr/lib/python2.7/dist-packages/_dbus_*.so /home/travis/virtualenv/python2.7.8/site-packages/
 #    - sudo apt-get install libdbus-glib-1-dev
