shortened travis testing file for the time being

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,39 +46,40 @@ before_install:
     
 ## Command to install pip dependencies
 install: 
-    - pip install mechanize keyring colorama python2-pythondialog beautifulsoup4
+    - pip install keyring colorama python2-pythondialog beautifulsoup4
 #    - pip install dbus-python
 
 ## command to run tests
-script: 
-    - ./kotnetcli.py -h
-    - ./kotnetcli.py -1 -c 
-    - ./kotnetcli.py -1 -u
-    - ./kotnetcli.py -1 -t
-    - ./kotnetcli.py -1 -d
-    - ./kotnetcli.py -1 -s
-    - ./kotnetcli.py -1 -q
-    - ./kotnetcli.py -0 -c
-    - ./kotnetcli.py -0 -u
-    - ./kotnetcli.py -0 -t
-    - ./kotnetcli.py -0 -d
-    - ./kotnetcli.py -0 -s
-    - ./kotnetcli.py -0 -q
-    - ./pyinstaller/pyinstaller.py compile-lin.spec
-    - ./dist/kotnetcli-lin -h
-    - ./dist/kotnetcli-lin -1 -c 
-    - ./dist/kotnetcli-lin -1 -u
-    - ./dist/kotnetcli-lin -1 -t
-    - ./dist/kotnetcli-lin -1 -d
-    - ./dist/kotnetcli-lin -1 -s
-    - ./dist/kotnetcli-lin -1 -q
-    - ./dist/kotnetcli-lin -0 -c
-    - ./dist/kotnetcli-lin -0 -u
-    - ./dist/kotnetcli-lin -0 -t
-    - ./dist/kotnetcli-lin -0 -d
-    - ./dist/kotnetcli-lin -0 -s
-    - ./dist/kotnetcli-lin -0 -q
-    - ./kotnetcli_test.py --run-tests
+script: nosetests
+    
+    #- ./kotnetcli.py -h
+    #- ./kotnetcli.py -1 -c 
+    #- ./kotnetcli.py -1 -u
+    #- ./kotnetcli.py -1 -t
+    #- ./kotnetcli.py -1 -d
+    #- ./kotnetcli.py -1 -s
+    #- ./kotnetcli.py -1 -q
+    #- ./kotnetcli.py -0 -c
+    #- ./kotnetcli.py -0 -u
+    #- ./kotnetcli.py -0 -t
+    #- ./kotnetcli.py -0 -d
+    #- ./kotnetcli.py -0 -s
+    #- ./kotnetcli.py -0 -q
+    #- ./pyinstaller/pyinstaller.py compile-lin.spec
+    #- ./dist/kotnetcli-lin -h
+    #- ./dist/kotnetcli-lin -1 -c 
+    #- ./dist/kotnetcli-lin -1 -u
+    #- ./dist/kotnetcli-lin -1 -t
+    #- ./dist/kotnetcli-lin -1 -d
+    #- ./dist/kotnetcli-lin -1 -s
+    #- ./dist/kotnetcli-lin -1 -q
+    #- ./dist/kotnetcli-lin -0 -c
+    #- ./dist/kotnetcli-lin -0 -u
+    #- ./dist/kotnetcli-lin -0 -t
+    #- ./dist/kotnetcli-lin -0 -d
+    #- ./dist/kotnetcli-lin -0 -s
+    #- ./dist/kotnetcli-lin -0 -q
+    #- ./kotnetcli_test.py --run-tests
 
 notifications:
     - email: false
