--- a/.travis.yml
+++ b/.travis.yml
@@ -52,12 +52,13 @@ before_install:
     
 ## Command to install pip dependencies
 install: 
-    - pip install keyring colorama python2-pythondialog \
-      beautifulsoup4 argcomplete requests
+    - pip install keyring colorama beautifulsoup4 argcomplete requests
+    #python2-pythondialog
 #    - pip install dbus-python
 
 ## command to run tests
 script: python setup.py install
+        ./kotnetcli-dummy --run-tests
     
     #- ./kotnetcli.py -h
     #- ./kotnetcli.py -1 -c 
